Change contract JsonArray prams to JsonObject param
- Refactor TestUtils